<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ink_spread" />

    <SeekBar
        android:id="@+id/ink_spread_seekbar"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:max="100"
        android:progress="50" >
    </SeekBar>

    <TextView
        android:id="@+id/onto_screen_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onto_screen_time" />

    <SeekBar
        android:id="@+id/onto_screen_seekbar"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:max="100"
        android:progress="50" >
    </SeekBar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_save_time" />

    <SeekBar
        android:id="@+id/auto_save_seekbar"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:max="100"
        android:progress="50" >
    </SeekBar>

    <TextView
        android:id="@+id/auto_upload_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_upload_time" />

    <SeekBar
        android:id="@+id/auto_upload_seekbar"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:max="100"
        android:progress="50" >
    </SeekBar>

    <TextView
        android:id="@+id/display_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display" />

    <RadioGroup
        android:id="@+id/display_radio_group"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:checkedButton="@+id/display_radio_byWidth"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/display_radio_byHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_byHeight" />

        <RadioButton
            android:id="@+id/display_radio_byWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/display_byWidth" />
    </RadioGroup>

    <TextView
        android:id="@+id/cali_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cali" />

    <RadioGroup
        android:id="@+id/cali_radio_group"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:checkedButton="@+id/cali_a"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/cali_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cali_a" />

        <RadioButton
            android:id="@+id/cali_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cali_b" />
    </RadioGroup>

    <TextView
        android:id="@+id/display_parameters_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_parameters" />

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_parameters_base_pad" />

        <TextView
            android:id="@+id/display_parameters_base_pad_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" />

        <Button
            android:id="@+id/display_parameters_base_pad_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/display_parameters_base_pad_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/button_delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_parameters_word_pad" />

        <TextView
            android:id="@+id/display_parameters_word_pad_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" />

        <Button
            android:id="@+id/display_parameters_word_pad_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/display_parameters_word_pad_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/button_delete" />
    </LinearLayout>

</LinearLayout>